@@ -22,6 +22,7 @@ plugins {
     id 'eclipse'
     id 'com.github.ben-manes.versions' version '0.28.0'
     id 'biz.aQute.bnd.builder' version '5.1.0'
+    id "net.ltgt.errorprone" version "3.0.1"
 }
 
 description = 'Mockito mock objects library core API and implementation'
@@ -56,9 +57,7 @@ allprojects { proj ->
         mavenCentral()
         jcenter()
     }
-    plugins.withId('java') {
-        proj.apply from: "$rootDir/gradle/errorprone.gradle"
-    }
+
     tasks.withType(JavaCompile) {
         //I don't believe those warnings add value given modern IDEs
         options.warnings = false
@@ -68,13 +67,18 @@ allprojects { proj ->
         options.addStringOption('Xdoclint:none', '-quiet')
         options.addStringOption('encoding', 'UTF-8')
         options.addStringOption('charSet', 'UTF-8')
-        options.setSource('8')
+        options.setSource('17')
     }
 
     tasks.withType(AbstractArchiveTask) {
         preserveFileTimestamps = false
         reproducibleFileOrder = true
     }
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 configurations {
@@ -97,32 +101,46 @@ dependencies {
 
     testImplementation sourceSets.test.output
 
-    annotationProcessor "com.uber.nullaway:nullaway:0.10.8"
-    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.6-alpha-5"
 
+    annotationProcessor "com.uber.nullaway:nullaway:0.12.4-SNAPSHOT"
+    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.16-SNAPSHOT"
+    implementation "edu.ucr.cs.riple.annotator:annotation-util:1.3.16-SNAPSHOT"
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
-    errorprone "com.google.errorprone:error_prone_core:2.3.2"
+    errorprone "com.google.errorprone:error_prone_core:2.35.1"
     errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
+    compileOnly "com.uber.nullaway:nullaway-annotations:0.12.4-SNAPSHOT"
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
+    ]
+}
+def scanner_path = project.rootProject.projectDir.toString() + "/annotator-out/scanner.xml"
+def nullaway_path = project.rootProject.projectDir.toString() + "/annotator-out/nullaway.xml"
 import net.ltgt.gradle.errorprone.CheckSeverity
 tasks.withType(JavaCompile) {
     // remove the if condition if you want to run NullAway on test code
     if (!name.toLowerCase().contains("test")) {
         options.errorprone.disableAllChecks = true
-        options.errorprone.disableAllWarnings = true
         options.errorprone {
             check("NullAway", CheckSeverity.ERROR)
             check("AnnotatorScanner", CheckSeverity.ERROR)
             option("NullAway:AnnotatedPackages", "org.mockito")
             option("NullAway:SerializeFixMetadata", "true")
-            option("NullAway:FixSerializationConfigPath", "/tmp/annotator/checker.xml")
-            option("AnnotatorScanner:ConfigPath", "/tmp/annotator/scanner.xml")
+            option("NullAway:FixSerializationConfigPath", nullaway_path)
+            option("AnnotatorScanner:ConfigPath", scanner_path)
         }
+        options.compilerArgs << "-Xmaxerrs" << "100000"
+        options.compilerArgs << "-Xmaxwarns" << "100000"
     }
-    options.compilerArgs << "-Xmaxerrs" << "100000"
-    options.compilerArgs << "-Xmaxwarns" << "100000"
 }
+
 
 wrapper {
     gradleVersion = '5.3.1'
